--- a/package.json
+++ b/package.json
@@ -158,7 +158,8 @@
     "ws": "^7.5.5"
   },
   "devDependencies": {
-    "@types/firebase": "^3.2.1"
+    "@types/firebase": "^3.2.1",
+    "busboy": "^0.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
